Fix inactive scrollbar

--- a/frontend/assets/sass/app.sass
+++ b/frontend/assets/sass/app.sass
@@ -8,3 +8,6 @@ $fullhd-enabled: false
 @import "bulma/bulma.sass"
 
 @import 'transitions'
+
+html
+    overflow-y: hidden !important
